@@ -755,7 +755,7 @@
 			  <property name="visible">True</property>
 			  <property name="max_saved">10</property>
 			  <property name="directory_entry">False</property>
-			  <property name="modal">False</property>
+			  <property name="modal">True</property>
 
 			  <child internal-child="entry">
 			    <widget class="GtkEntry" id="combo-entry1">
@@ -1105,7 +1105,7 @@
 
                         <child>
                           <widget class="GnomeFileEntry" id="custom_program_entry">
-                            <property name="modal">no</property>
+                            <property name="modal">True</property>
                             <property name="directory_entry">no</property>
                             <property name="visible">yes</property>
 
@@ -1387,7 +1387,7 @@
 
                         <child>
                           <widget class="GnomeFileEntry" id="program_entry">
-                            <property name="modal">no</property>
+                            <property name="modal">True</property>
                             <property name="directory_entry">no</property>
                             <property name="visible">yes</property>
 
